work on appendix

--- a/main.bib
+++ b/main.bib
@@ -61,6 +61,23 @@
   urldate = {2022-08-19}
 }
 
+@online{wiki_neuron,
+  author = {Wikipedia},
+  title = {Neuron},
+  year = {2023},
+  url = {https://en.wikipedia.org/wiki/Neuron},
+  urldate = {2023-02-19}
+}
+
+@online{venturebeat_img_analysis,
+  author = {Venture Beat},
+  title = {New deep learning model brings image segmentation to edge devices},
+  year = {2023},
+  url = {https://venturebeat.com/ai/new-deep-learning-model-brings-image-segmentation-to-edge-devices/},
+  urldate = {2023-02-19}
+}
+
+
 @online{NCAs_distill,
   author = {Distill},
   title = {Growing Neural Cellular Automata},
@@ -1561,3 +1578,32 @@ booktitle={International Conference on Learning Representations},
 year={2019},
 url={https://openreview.net/forum?id=HJGven05Y7},
 }
+
+ @article{Hochreiter_Schmidhuber_1997, title={Long Short-Term Memory}, volume={9}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/neco.1997.9.8.1735}, abstractNote={Learning to store information over extended time intervals by recurrent backpropagation takes a very long time, mostly because of insufficient, decaying error backflow. We briefly review Hochreiter’s (1991) analysis of this problem, then address it by introducing a novel, efficient, gradient based method called long short-term memory (LSTM). Truncating the gradient where this does not do harm, LSTM can learn to bridge minimal time lags in excess of 1000 discrete-time steps by enforcing constant error flow through constant error carousels within special units. Multiplicative gate units learn to open and close access to the constant error flow. LSTM is local in space and time; its computational complexity per time step and weight is O. 1. Our experiments with artificial data involve local, distributed, real-valued, and noisy pattern representations. In comparisons with real-time recurrent learning, back propagation through time, recurrent cascade correlation, Elman nets, and neural sequence chunking, LSTM leads to many more successful runs, and learns much faster. LSTM also solves complex, artificial long-time-lag tasks that have never been solved by previous recurrent network algorithms.}, number={8}, journal={Neural Computation}, author={Hochreiter, Sepp and Schmidhuber, Jürgen}, year={1997}, month={Nov}, pages={1735–1780}, language={en} }
+
+@inproceedings{10.5555/2969033.2969073, author = {Mnih, Volodymyr and Heess, Nicolas and Graves, Alex and Kavukcuoglu, Koray}, title = {Recurrent Models of Visual Attention}, year = {2014}, publisher = {MIT Press}, address = {Cambridge, MA, USA}, booktitle = {Proceedings of the 27th International Conference on Neural Information Processing Systems - Volume 2}, pages = {2204–2212}, numpages = {9}, location = {Montreal, Canada}, series = {NIPS'14} }
+
+@article{Cortes_Vapnik_1995, title={Support-vector networks}, volume={20}, ISSN={0885-6125, 1573-0565}, DOI={10.1007/BF00994018}, number={3}, journal={Machine Learning}, author={Cortes, Corinna and Vapnik, Vladimir}, year={1995}, month={Sep}, pages={273–297}, language={en} }
+
+@article{Cover_Hart_1967, title={Nearest neighbor pattern classification}, volume={13}, ISSN={0018-9448, 1557-9654}, DOI={10.1109/TIT.1967.1053964}, number={1}, journal={IEEE Transactions on Information Theory}, author={Cover, T. and Hart, P.}, year={1967}, month={Jan}, pages={21–27} }
+
+@article{krizhevsky2009learning,
+  title={Learning multiple layers of features from tiny images},
+  author={Krizhevsky, Alex and Hinton, Geoffrey and others},
+  year={2009},
+  publisher={Toronto, ON, Canada}
+}
+
+@online{xiao2017/online,
+  author       = {Han Xiao and Kashif Rasul and Roland Vollgraf},
+  title        = {Fashion-MNIST: a Novel Image Dataset for Benchmarking Machine Learning Algorithms},
+  date         = {2017-08-28},
+  year         = {2017},
+  eprintclass  = {cs.LG},
+  eprinttype   = {arXiv},
+  eprint       = {cs.LG/1708.07747},
+}
+
+ @article{Lecun_Bottou_Bengio_Haffner_1998, title={Gradient-based learning applied to document recognition}, volume={86}, ISSN={00189219}, DOI={10.1109/5.726791}, number={11}, journal={Proceedings of the IEEE}, author={Lecun, Y. and Bottou, L. and Bengio, Y. and Haffner, P.}, year={1998}, month={Nov}, pages={2278–2324} }
+
+ @inproceedings{Deng_Dong_Socher_Li_KaiLi_LiFei_Fei_2009, address={Miami, FL}, title={ImageNet: A large-scale hierarchical image database}, ISBN={978-1-4244-3992-8}, url={https://ieeexplore.ieee.org/document/5206848/}, DOI={10.1109/CVPR.2009.5206848}, booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition}, publisher={IEEE}, author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Kai Li and Li Fei-Fei}, year={2009}, month={Jun}, pages={248–255} }
