--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -43,3 +43,5 @@ He divides the process in seven steps;
 
 %TODO: Meinung von Autor ergänzen (von mir): Backprop gut für Pattern recognition -> sinnvolle Vektoren aus Zahlen -> Cognition fehlt, Cognition sollte Feedback an Pattern Extraction sein, zurzeit keine Cognition sondern nur Korrelation zwischen Pattern und Label
 %TODO: Umschreiben: Schreibe DL funktioniert gut, sehr gut für Pattern Extraction. Dies ist aber nur ein Baustein eines intelligenten Systems. Beispielsweise fehlt cognition komplett (z.B. in NLP sind Vektoren wie König - Königin = Mann - Frau -> das System korrepiert die Informationen aber nur und hat keine Ahnung, was dies bedeutet. Um dies zu erreichen könnte nach dem mit Backprop trainierten Pattern-Extraction System ein weiteres System nötig sein. Weitere Bausteine könnten sein: Continous Input, Netzfragmente, Sparsity, anderer Lernalgorithmus, World-Modell, ...
+
+%TODO: VAE funktioniert aktuell nur bei zentrierten Objekten -> bei grossen Bilder muss Möglichkeit bestehen zu sagen ich bin Background oder ich bin Objekt xy und der andere VAE sagt ich bin Objekt ab
