--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -29,6 +29,8 @@ This thesis addresses some of these problems, especially the robustness problem.
 This is done by exploring different architectures inspired by findings from the field of neuroscience\sidenote{this field studies how the human nervous system and especially the brain works}.
 The inspiration is drawn from neuroscience as the human brain seems to not have these problems and thus incorporating findings from neuroscience into the deep learning framework might help to overcome some of the current limitations.
 In this thesis, the theory of natural intelligence by von der Malsburg et al. \sidecite{von_der_Malsburg_Stadelmann_Grewe_2022} in particular is used as an inspirational source.
+In accordance with the aforementioned theory, visual processing is examined and consequently, the focus is on deep learning architectures for image processing.
+Furthermore, the main focus of this thesis is on \emph{finding new principles} of deep learning architectures and not on achieving state-of-the-art performance in terms of accuracy or f-score on existing benchmarking datasets.
 
 The thesis differs from neurocomputing\sidenote{neurocomputing is considered a sub-field of neuroscience that deals with the implementation of algorithms with a high degree of plausibility according to neuroscientific findings on how natural nervous systems work} in the sense that the architectures investigated are still closely related to the DL framework and, for example, do not use time-dynamic signals. 
 For the completeness of this thesis, an overview of neurocomputing is given in Section \secref{neurocomputing}.
