--- a/styles/phdbibliobyphd.sty
+++ b/styles/phdbibliobyphd.sty
@@ -71,15 +71,15 @@
 
 \NewDocumentCommand{\sidecite}{O{}O{} o m}{%
 	\cite[#1][#2]{#4}%
-	\def\itemdelim{---}
+	\def\itemdelim{---}%
 	\margincitation[#3]{#4}%
 }
 
-\newcommand\margincitedelim{\\} % Choose the default separator for multiple citations
+\newcommand\margincitedelim{\\}% Choose the default separator for multiple citations
 \NewDocumentCommand{\margincitation}{o >{\SplitList{,}}m}{% The mandatory parameter is a comma-separated list of citation keys, which is splitted into single items
  	% Redefine the \margincitedelim with a delay (https://tex.stackexchange.com/questions/110898/package-xparse-splitlist-last-token). Users can 'renew' the \margincitedelim command in their main.tex.
- 	\let\origmargincitedelim\margincitedelim
- 	\renewcommand\margincitedelim{\renewcommand\margincitedelim{\origmargincitedelim}}
+ 	\let\origmargincitedelim\margincitedelim%
+ 	\renewcommand\margincitedelim{\renewcommand\margincitedelim{\origmargincitedelim}}%
  	\marginnote[#1]{\ProcessList{#2}{\formatmargincitation}}% Create a marginnote for each item
  	\let\margincitedelim\origmargincitedelim% Reset
  }
